# azure-agent-starter-pack

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
specs/001-agent-scaffold-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-agent-scaffold-cli/checklists/: requirements.md
specs/001-agent-scaffold-cli/contracts/: cli-commands.md  template-manifest.md
src/azure_agent_starter_pack/: __init__.py
src/azure_agent_starter_pack/adapters/: registry.py
src/azure_agent_starter_pack/adapters/framework/: base.py  crewai.py  google_adk.py  langgraph.py  microsoft.py
src/azure_agent_starter_pack/adapters/pipeline/: __init__.py  azure_devops.py  base.py  github_actions.py
src/azure_agent_starter_pack/adapters/project_type/: __init__.py  agentic_rag.py  base.py  multi_agent_api.py  multi_agent_react_ui.py
src/azure_agent_starter_pack/adapters/runtime/: aks.py  app_service.py  base.py  container_apps.py
src/azure_agent_starter_pack/cli/: app.py  doctor_cmd.py  init_cmd.py  upgrade_cmd.py
src/azure_agent_starter_pack/config/: compatibility.py  schema.py
src/azure_agent_starter_pack/render/: __init__.py  cache.py  loader.py  renderer.py
src/azure_agent_starter_pack/templates/_common/: pyproject.toml.j2  run.py.j2
src/azure_agent_starter_pack/templates/_common/config/: settings.py.j2
src/azure_agent_starter_pack/templates/_common/infra/: README.md.j2
src/azure_agent_starter_pack/templates/_common/src/: identity.py.j2  observability.py.j2
src/azure_agent_starter_pack/templates/crewai/agentic_rag/: requirements-rag.txt.j2
src/azure_agent_starter_pack/templates/crewai/multi_agent_api/: .env.example.j2  README.md.j2  requirements.txt.j2
src/azure_agent_starter_pack/templates/google_adk/agentic_rag/: .env.example.j2  requirements.txt.j2
src/azure_agent_starter_pack/templates/google_adk/multi_agent_api/: .env.example.j2  requirements.txt.j2
tests/: __init__.py
tests/integration/cli/: test_determinism.py  test_doctor.py  test_generated_runnable.py  test_init.py  test_init_adk_terraform.py  test_init_agentic_rag.py  test_init_all_frameworks.py  test_init_azure.py  test_upgrade.py
tests/unit/: test_compatibility.py  test_config_schema.py
tests/unit/adapters/: test_framework_langgraph.py  test_framework_microsoft.py  test_registry.py
(+76 files in other folders)
